<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@mipmap/login_backpic"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingLeft="35dip"
            android:paddingRight="35dip">

            <!--文字与屏幕上边缘的距离-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="65">

            </LinearLayout>

            <!--文字：移动标准作业系统-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/logintext1"
                    android:textColor="@android:color/white"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--文字与图片的间距-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="35">

            </LinearLayout>

            <!--图片-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="110">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_icon" />
            </LinearLayout>
            <!--图片与文字的间距-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

            </LinearLayout>

            <!--文字：欢迎登录-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/logintext2"
                    android:textColor="@color/white1"
                    android:textSize="20dp" />
            </LinearLayout>

            <!--文字与账号间距-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="100">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="70"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/num_icon" />

                    <EditText
                        android:id="@+id/username_login"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:drawablePadding="18dp"
                        android:gravity="center|left"
                        android:hint="@string/logindefault1"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:paddingLeft="0dip"
                        android:textSize="18sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_gray" />
            </LinearLayout>
            <!--账号-->


            <!--账号与密码的间距-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="7"></LinearLayout>

            <!--密码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="70"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/num_icon" />

                    <EditText
                        android:id="@+id/password_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:drawablePadding="18dp"
                        android:gravity="center|left"
                        android:hint="@string/logindefault2"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="0dp"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_gray" />
            </LinearLayout>


            <!--登录-->
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"
                android:layout_weight="55"
                android:background="@drawable/button_login_style"
                android:gravity="center"
                android:paddingBottom="0.0dip"
                android:paddingLeft="0dip"
                android:paddingRight="0dip"
                android:paddingTop="0.0dip"
                android:text="@string/logintitle"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
            <!--与屏幕下边缘的间距-->
        </LinearLayout>
    </LinearLayout>

</LinearLayout>